# NHL_RANKING

./: Cargo.toml  test.py
data/: metrics.csv  nhl_teams.db
src/: main.rs  model.rs  models.rs  rating.rs  utils.rs
src/data/: db.rs  models.rs  nhl.db  nhl_teams.db
src/data/models/: data.rs  games.rs  head2head.rs  last10.rs  prediction.rs  probability.rs  teams.rs
src/model/: historical.rs  last10.rs  model.rs  ranker.rs  state.rs
src/models/: players.rs  teams.rs
src/rating/: openskill.rs
src/utils/: ids.rs
