[package]
name = "NHL_ranking"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
env_logger = "0.11.8"
log = "0.4.28"
nhl_api = "0.6.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
skillratings = { version = "0.27.1", features = ["serde"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
