[package]
name = "NHL_ranking"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16.1"
anyhow = "1.0.100"
chrono = "0.4.42"
csv = "1.4.0"
env_logger = "0.11.8"
itertools = "0.14.0"
linfa = "0.8.0"
linfa-trees = "0.8.0"
log = "0.4.28"
ndarray-csv = "0.5.4"
nhl_api = "0.7.0"
plotters = "0.3.7"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
skillratings = { version = "0.27.1", features = ["serde"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
linfa-bayes = "0.8.0"
linfa-logistic = "0.8.0"
rand = "0.8.5"
